# Content-Based-Image-Retrieval

./: .gitignore  AGENTS.md  CBIR_Doc.docx  CBIR_Improvements.docx  CMakeLists.txt  CMakePresets.json  bird_image_retrieval_demo.md  bird_image_retrieval_system.md  bird_image_search_requirements.md  evaluate.py  evaluation_results.txt
include/: config.h  feature_extractor.h  hnsw_index.h  image_preprocess.h  indexer.h  main_window.h  searcher.h  sqlite_repo.h  types.h
src/: feature_extractor.cpp  hnsw_index.cpp  image_preprocess.cpp  indexer.cpp  main.cpp  main_window.cpp  qt_main.cpp  searcher.cpp  sqlite_repo.cpp
